--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset={S_CONTENT_ENCODING}" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="London Amateur Brewers - The homebrew club for brewers of all levels based in and around London. We meet monthly, come and join us." />
   {META}
 
   <title>{SITENAME} | <!-- IF S_IN_MCP -->{L_MCP} | <!-- ELSEIF S_IN_UCP -->{L_UCP} | <!-- ENDIF -->{PAGE_TITLE}</title>
@@ -60,10 +60,15 @@
 
   // ]]>
   </script>
+  <script type="text/javascript" src="/wp-includes/js/jquery/jquery.js"></script>
   <script type="text/javascript" src="{T_SUPER_TEMPLATE_PATH}/styleswitcher.js"></script>
   <script type="text/javascript" src="{T_SUPER_TEMPLATE_PATH}/forum_fn.js"></script>
-  <script type="text/javascript" src="/wp-includes/js/jquery/jquery.js"></script>
   <script type="text/javascript" src="/wp-content/themes/lonbrew-wp/assets/js/bootstrap.min.js"></script>
+
+  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
   <link href="{T_THEME_PATH}/print.css" rel="stylesheet" type="text/css" media="print" title="printonly" />
   <link href="{T_STYLESHEET_LINK}" rel="stylesheet" type="text/css" media="screen, projection" />
