--- a/template/viewforum_body.html
+++ b/template/viewforum_body.html
@@ -26,60 +26,20 @@
 <!-- ENDIF -->
 
 <!-- IF S_HAS_SUBFORUM -->
-<!-- IF not S_IS_BOT and U_MARK_FORUMS -->
-<ul class="linklist">
-  <li class="rightside"><a href="{U_MARK_FORUMS}">{L_MARK_SUBFORUMS_READ}</a></li>
-</ul>
-<!-- ENDIF -->
-  <!-- INCLUDE forumlist_body.html -->
+  <!-- IF not S_IS_BOT and U_MARK_FORUMS -->
+  <ul class="linklist">
+    <li class="rightside"><a href="{U_MARK_FORUMS}">{L_MARK_SUBFORUMS_READ}</a></li>
+  </ul>
+  <!-- ENDIF -->
+    <!-- INCLUDE forumlist_body.html -->
 <!-- ENDIF -->
 
 <!-- IF S_DISPLAY_POST_INFO or PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
   <div class="topic-actions" <!-- IF S_HAS_SUBFORUM -->style="margin-top: 2em;"<!-- ENDIF -->>
     <div class="row-fluid">
-
-      <!-- IF not S_IS_BOT and S_DISPLAY_POST_INFO -->
-        <div class="span4 buttons">
-          <!-- IF S_IS_LOCKED -->
-            <div class="locked-icon" title="{L_FORUM_LOCKED}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_FORUM_LOCKED}</a></div>
-          <!-- ELSE -->
-            <div class="post-icon" title="{L_POST_TOPIC}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_POST_TOPIC}</a></div>
-          <!-- ENDIF -->
-        </div>
-      <!-- ENDIF -->
-
-      <!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
-        <div class="p-pagination span4">
-          <!-- IF not S_IS_BOT -->
-            <a href="{U_MARK_TOPICS}" accesskey="m">{L_MARK_TOPICS_READ}</a>
-          <!-- ENDIF -->
-          <!-- IF TOTAL_TOPICS -->
-            &bull; <span>{TOTAL_TOPICS}</span>
-          <!-- ENDIF -->
-          <!-- IF PAGE_NUMBER -->
-            <!-- IF PAGINATION -->
-              <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"> &bull; {PAGE_NUMBER}</a> &bull; {PAGINATION}
-            <!-- ELSE -->
-              &bull; {PAGE_NUMBER}
-            <!-- ENDIF -->
-          <!-- ENDIF -->
-        </div>
-      <!-- ENDIF -->
-
-      <!-- IF S_DISPLAY_SEARCHBOX -->
-        <div class="span4">
-          <form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search" class="form-search pull-right" style="margin:0;">
-            <fieldset>
-              <input class="input-medium search" type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_FORUM}" />
-              <button type="submit" class="btn">{L_SEARCH}</button>
-              {S_SEARCH_LOCAL_HIDDEN_FIELDS}
-            </fieldset>
-          </form>
-        </div>
-      <!-- ENDIF -->
-
+      <!-- INCLUDE viewforum_buttons.html -->
+    </div>
   </div>
-</div>
 <!-- ENDIF -->
 
 <!-- IF S_NO_READ_ACCESS -->
@@ -166,46 +126,7 @@
 
 <!-- IF .topicrow and not S_DISPLAY_ACTIVE -->
   <div class="row-fluid">
-
-    <!-- IF not S_IS_BOT and S_DISPLAY_POST_INFO -->
-      <div class="span4 buttons">
-        <!-- IF S_IS_LOCKED -->
-          <div class="locked-icon" title="{L_FORUM_LOCKED}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_FORUM_LOCKED}</div>
-        <!-- ELSE -->
-          <div class="post-icon" title="{L_POST_TOPIC}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_POST_TOPIC}</div>
-        <!-- ENDIF -->
-      </div>
-    <!-- ENDIF -->
-
-    <!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
-      <div class="p-pagination span4">
-        <!-- IF not S_IS_BOT -->
-          <a href="{U_MARK_TOPICS}" accesskey="m">{L_MARK_TOPICS_READ}</a>
-        <!-- ENDIF -->
-        <!-- IF TOTAL_TOPICS -->
-          &bull; <span>{TOTAL_TOPICS}</span>
-        <!-- ENDIF -->
-        <!-- IF PAGE_NUMBER -->
-          <!-- IF PAGINATION -->
-            <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"> &bull; {PAGE_NUMBER}</a> &bull; {PAGINATION}
-          <!-- ELSE -->
-            &bull; {PAGE_NUMBER}
-          <!-- ENDIF -->
-        <!-- ENDIF -->
-      </div>
-    <!-- ENDIF -->
-
-    <!-- IF S_DISPLAY_SEARCHBOX -->
-      <div class="span4">
-        <form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search" class="form-search pull-right" style="margin:0;">
-          <fieldset>
-            <input class="input-medium search" type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_FORUM}" />
-            <button type="submit" class="btn">{L_SEARCH}</button>
-            {S_SEARCH_LOCAL_HIDDEN_FIELDS}
-          </fieldset>
-        </form>
-      </div>
-    <!-- ENDIF -->
+    <!-- INCLUDE viewforum_buttons.html -->
   </div>
 </div>
 <!-- ENDIF -->
