--- a/template/login_body.html
+++ b/template/login_body.html
@@ -2,68 +2,89 @@
 
 <script type="text/javascript">
 // <![CDATA[
-	onload_functions.push('document.getElementById("<!-- IF S_ADMIN_AUTH -->{PASSWORD_CREDENTIAL}<!-- ELSE -->{USERNAME_CREDENTIAL}<!-- ENDIF -->").focus();');
+  onload_functions.push('document.getElementById("<!-- IF S_ADMIN_AUTH -->{PASSWORD_CREDENTIAL}<!-- ELSE -->{USERNAME_CREDENTIAL}<!-- ENDIF -->").focus();');
 // ]]>
 </script>
 
-<form action="{S_LOGIN_ACTION}" method="post" id="login">
-<div class="row-fluid panel">
-	<div class="well">
-		<h3 class="box-heading"><!-- IF LOGIN_EXPLAIN -->{LOGIN_EXPLAIN}<!-- ELSE -->{L_LOGIN}<!-- ENDIF --></h3>
-	<div class="content">
-		
+<form action="{S_LOGIN_ACTION}" method="post" id="login" class="form-horizontal">
+<div class="panel row-fluid">
+  <div class="well inner">
+    <h3><!-- IF LOGIN_EXPLAIN -->{LOGIN_EXPLAIN}<!-- ELSE -->{L_LOGIN}<!-- ENDIF --></h3>
 
-		<fieldset <!-- IF not S_CONFIRM_CODE -->class="fields1"<!-- ELSE -->class="fields2"<!-- ENDIF -->>
-		<!-- IF LOGIN_ERROR --><div class="error">{LOGIN_ERROR}</div><!-- ENDIF -->
-		<dl>
-			<dt><label for="{USERNAME_CREDENTIAL}">{L_USERNAME}:</label></dt>
-			<dd><input type="text" tabindex="1" name="{USERNAME_CREDENTIAL}" id="{USERNAME_CREDENTIAL}" size="25" value="{USERNAME}" class="inputbox autowidth" /></dd>
-		</dl>
-		<dl>
-			<dt><label for="{PASSWORD_CREDENTIAL}">{L_PASSWORD}:</label></dt>
-			<dd><input type="password" tabindex="2" id="{PASSWORD_CREDENTIAL}" name="{PASSWORD_CREDENTIAL}" size="25" class="inputbox autowidth" /></dd>
-			<!-- IF S_DISPLAY_FULL_LOGIN and (U_SEND_PASSWORD or U_RESEND_ACTIVATION) -->
-				<!-- IF U_SEND_PASSWORD --><dd><a href="{U_SEND_PASSWORD}">{L_FORGOT_PASS}</a></dd><!-- ENDIF -->
-				<!-- IF U_RESEND_ACTIVATION --><dd><a href="{U_RESEND_ACTIVATION}">{L_RESEND_ACTIVATION}</a></dd><!-- ENDIF -->
-			<!-- ENDIF -->
-		</dl>
-		<!-- IF CAPTCHA_TEMPLATE and S_CONFIRM_CODE -->
-			<!-- DEFINE $CAPTCHA_TAB_INDEX = 3 -->
-			<!-- INCLUDE {CAPTCHA_TEMPLATE} -->
-		<!-- ENDIF -->
-		<!-- IF S_DISPLAY_FULL_LOGIN -->
-		<dl>
-			<!-- IF S_AUTOLOGIN_ENABLED --><dd><label for="autologin"><input type="checkbox" name="autologin" id="autologin" tabindex="4" /> {L_LOG_ME_IN}</label></dd><!-- ENDIF -->
-			<dd><br><label for="viewonline"><input type="checkbox" name="viewonline" id="viewonline" tabindex="5" /> {L_HIDE_ME}</label></dd>
-		</dl>
-		<!-- ENDIF -->
+    <!-- IF LOGIN_ERROR -->
+    <div class="alert alert-error">
+      <div>{LOGIN_ERROR}</div>
+    </div>
+    <!-- ENDIF -->
 
-		{S_LOGIN_REDIRECT}
-		<dl>
-			<dt>&nbsp;</dt>
-			<dd>{S_HIDDEN_FIELDS}<input type="submit" name="login" tabindex="6" value="{L_LOGIN}" class="btn btn-primary" /></dd>
-		</dl>
-		</fieldset>
-	</div>
-	</div>
-</div>
+    <div class="control-group">
+      <label for="{USERNAME_CREDENTIAL}" class="control-label">{L_USERNAME}:</label>
+      <div class="controls">
+        <input type="text" name="{USERNAME_CREDENTIAL}" id="{USERNAME_CREDENTIAL}" title="{L_USERNAME}" />
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label for="{PASSWORD_CREDENTIAL}" class="control-label">{L_PASSWORD}:</label>
+      <div class="controls">
+        <input type="password" name="{PASSWORD_CREDENTIAL}" id="{PASSWORD_CREDENTIAL}" title="{L_PASSWORD}" />
+      </div>
+    </div>
+
+    <!-- IF S_DISPLAY_FULL_LOGIN and (U_SEND_PASSWORD or U_RESEND_ACTIVATION) -->
+      <div class="control-group">
+        <div class="controls">
+          <!-- IF U_SEND_PASSWORD --><div><a href="{U_SEND_PASSWORD}">{L_FORGOT_PASS}</a></div><!-- ENDIF -->
+          <!-- IF U_RESEND_ACTIVATION --><div><a href="{U_RESEND_ACTIVATION}">{L_RESEND_ACTIVATION}</a></div><!-- ENDIF -->
+        </div>
+      </div>
+    <!-- ENDIF -->
+
+    <!-- IF CAPTCHA_TEMPLATE and S_CONFIRM_CODE -->
+      <!-- INCLUDE {CAPTCHA_TEMPLATE} -->
+    <!-- ENDIF -->
+
+    <!-- IF S_DISPLAY_FULL_LOGIN -->
+      <div class="control-group">
+        <div class="controls">
+          <!-- IF S_AUTOLOGIN_ENABLED -->
+          <label for="autologin" class="checkbox">
+            <input type="checkbox" name="autologin" id="autologin" />
+            {L_LOG_ME_IN}
+          </label>
+          <!-- ENDIF -->
+
+          <label for="viewonline" class="checkbox">
+            <input type="checkbox" name="viewonline" id="viewonline" />
+            {L_HIDE_ME}
+          </label>
+        </div>
+      </div>
+    <!-- ENDIF -->
+
+    {S_LOGIN_REDIRECT}
+    {S_HIDDEN_FIELDS}
+
+    <div class="control-group">
+      <div class="controls">
+        <input type="submit" name="login" value="{L_LOGIN}" class="btn btn-primary" />
+      </div>
+    </div>
+  </div>
 
 
-<!-- IF not S_ADMIN_AUTH and S_REGISTER_ENABLED -->
-	<div class="row-fluid panel">
-		<div class="well">
-			<h3 class="box-heading">{L_REGISTER}</h3>
-		<div class="content">
-			
-			<p>{L_LOGIN_INFO}</p>
-			<p><strong><a href="{U_TERMS_USE}">{L_TERMS_USE}</a> | <a href="{U_PRIVACY}">{L_PRIVACY}</a></strong></p>
-			
-			<p><a href="{U_REGISTER}" class="btn btn-success">{L_REGISTER}</a></p>
-		</div>
+  <!-- IF not S_ADMIN_AUTH and S_REGISTER_ENABLED -->
+    <div class="row-fluid panel">
+      <div class="well inner">
+        <h3>{L_REGISTER}</h3>
 
-		</div>
-	</div>
-<!-- ENDIF -->
+        <p>{L_LOGIN_INFO}</p>
+        <p><strong><a href="{U_TERMS_USE}">{L_TERMS_USE}</a> | <a href="{U_PRIVACY}">{L_PRIVACY}</a></strong></p>
+
+        <p><a href="{U_REGISTER}" class="btn btn-success">{L_REGISTER}</a></p>
+      </div>
+    </div>
+  <!-- ENDIF -->
 
 </form>
 
